@@ -73,6 +73,11 @@ MixMonitor
  * A new function, MIXMONITOR, has been added to allow access to individual
    instances of MixMonitor on a channel.
 
+Debugging
+-------------------------
+ * Core Show Locks output now includes Thread/LWP ID if the platform
+   supports this feature.
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 12.0.0 to Asterisk 12.1.0 ------------
 ------------------------------------------------------------------------------
